<resources>
    <string name="app_name">TransIT</string>

    <string name="Arabic">Arabic</string>
    <string name="French">French</string>
    <string name="English">English</string>

    <string name="title_activity_maps">Map</string>

    <string name="notif">Notifications</string>

    <string name="partagez">Partagez</string>
    <string name="Nottez">Nottez_nous</string>
    <string name="Mail">e_mail</string>
    <string name="paramétre">Paramétre</string>
    <string name="mon_profil">Mon Profil</string>
    <string name="navigation_drawer_open">nav_open</string>
    <string name="navigation_drawer_close">Nav_close</string>
    <string name="Rate_fragment">rate_fragment</string>
    <string name="share_fragment">share_fragment</string>
    <string name="paramétre_fragment">Param_fragment</string>
    <string name="Notification_fragment">Notification_fragment</string>
    <string name="mail_fragment">mail_fragment</string>
    <string name="title_activity_acceuil_">Acceuil_Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="access_token">pk.eyJ1IjoiYmVsZ2FjZW1haGxlbSIsImEiOiJja2E4enZqZHYwMWJkMnJydTRqMzQ0cXY1In0.pr7u_MjK5kIZkcRD9Zauzw</string>
    <string name="zoom_map_in_and_out_instruction">zoom</string>

    <string name="transvit">TransVit</string>
    <string name="signaler">signaler</string>
    <string name="plan_du_r_seau">Plan du réseau</string>
    <string name="espace_client">Espace client</string>

    <string name="username">user</string>
    <string name="password">PASS</string>
    <string name="confirm">Confirm</string>
    <string name="email">MAIL</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="activer_les_notifications">activer les notifications</string>
    <string name="_31">31</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="title_activity_station_1_aller">station_1_aller</string>
    <string name="title_activity_tabbed">tabbed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>