<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffff"
    android:id="@+id/draw_layout"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    tools:openDrawer="start">


    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/nav_header">
    </com.google.android.material.navigation.NavigationView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:background="@color/mapboxGreen"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:menu="@menu/drawer_menu"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <CalendarView

                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </CalendarView>
        </androidx.appcompat.widget.Toolbar>


        <FrameLayout
            android:id="@+id/Fragment1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/Navigation"
            tools:ignore="ObsoleteLayoutParam">

            <androidx.core.widget.NestedScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/ligne1"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:background="#F44336"
                            android:layout_marginRight="12dp"
                            android:layout_marginTop="420dp"
                            android:text="@string/_1"
                            android:textStyle="bold"
                            />
                        <Button
                            android:id="@+id/ligne2"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginRight="12dp"
                            android:layout_marginTop="420dp"
                            android:background="#673AB7"
                            android:text="@string/_2"/>
                        <Button
                            android:id="@+id/ligne3"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginRight="12dp"
                            android:layout_marginTop="420dp"
                            android:background="#2196F3"
                            android:text="@string/_3"
                            tools:ignore="RtlHardcoded" />
                        <Button
                            android:id="@+id/ligne4"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:background="#FFC107"
                            android:text="@string/_4"
                            tools:ignore="RtlHardcoded" />
                        <Button
                            android:id="@+id/ligne5"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:background="#4CAF50"
                            android:text="@string/_5"/>
                        <Button
                            android:id="@+id/ligne6"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:background="#CDDC39"
                            android:text="@string/_6"/>
                        <Button
                            android:id="@+id/ligne7"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginRight="12dp"
                            android:layout_marginTop="420dp"
                            android:background="#5F36F4"
                            android:text="@string/_7"/>
                        <Button
                            android:id="@+id/ligne8"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:background="#000000"
                            android:text="@string/_8"/>
                        <Button
                            android:id="@+id/ligne9"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:background="#9C27B0"
                            android:text="@string/_9"/>
                        <Button
                            android:id="@+id/ligne10"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginRight="12dp"
                            android:layout_marginTop="420dp"
                            android:background="#2EF43636"
                            android:text="@string/_10"/>
                        <Button
                            android:id="@+id/ligne11"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"

                            android:layout_marginRight="12dp"
                            android:background="#F50057"
                            android:text="@string/_11"/>
                        <Button
                            android:id="@+id/ligne12"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:background="#CCF44336"
                            android:text="@string/_12"/>
                        <Button
                            android:id="@+id/ligne13"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:background="#6036ABF4"
                            android:text="@string/_13"/>

                        <Button
                            android:id="@+id/ligne14"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:background="#3B0002"
                            android:text="@string/_14" />

                        <Button
                            android:id="@+id/ligne15"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:background="#630929"
                            android:text="@string/_15"/>
                        <Button
                            android:id="@+id/ligne16"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:background="#18450B"
                            android:layout_marginRight="12dp"
                            android:text="@string/_16"/>
                        <Button
                            android:id="@+id/ligne17"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:background="#004058"
                            android:text="@string/_17"/>
                        <Button
                            android:id="@+id/ligne18"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:background="#F6E8B1"
                            android:text="@string/_18"/>
                        <Button
                            android:id="@+id/ligne19"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:background="#40A497"
                            android:text="@string/_19"/>
                        <Button
                            android:id="@+id/ligne20"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:background="#89725B"
                            android:text="@string/_20"/>
                        <Button
                            android:id="@+id/ligne21"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:background="#B9121B"
                            android:text="@string/_21"/>
                        <Button
                            android:id="@+id/ligne22"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:background="#FFF168"
                            android:text="@string/_22"/>
                        <Button
                            android:id="@+id/ligne23"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:background="#FFFFFF"
                            android:text="@string/_23"/>
                        <Button
                            android:id="@+id/ligne24"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:background="#242BAA"
                            android:text="@string/_24"/>
                        <Button
                            android:id="@+id/ligne25"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:text="@string/_25"/>
                        <Button
                            android:id="@+id/ligne26"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:text="@string/_26"/>
                        <Button
                            android:id="@+id/ligne27"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:text="@string/_27"/>
                        <Button
                            android:id="@+id/ligne28"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:text="@string/_28"/>
                        <Button
                            android:id="@+id/ligne29"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginRight="12dp"
                            android:layout_marginTop="420dp"
                            android:text="@string/_29"/>
                        <Button
                            android:id="@+id/ligne30"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginTop="420dp"
                            android:layout_marginRight="12dp"
                            android:text="@string/_30"/>
                        <Button
                            android:id="@+id/ligne31"
                            android:layout_width="wrap_content"
                            android:layout_height="80dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginTop="420dp"
                            android:text="@string/_31"/>
                    </LinearLayout>
                </HorizontalScrollView>
            </androidx.core.widget.NestedScrollView>


            <nl.joery.animatedbottombar.AnimatedBottomBar
                android:id="@+id/animatedBottomBar"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="610dp"
                app:abb_indicatorAppearance="round"
                app:abb_indicatorColor="#FF5722"
                app:abb_indicatorHeight="4dp"
                app:abb_indicatorLocation="bottom"
                app:abb_indicatorMargin="16dp"
                app:abb_selectedIndex="0"
                app:abb_selectedTabType="icon"
                app:abb_tabColor="#454545"
                app:abb_tabColorSelected="#4CAF50"
                app:abb_tabs="@menu/menu_animated" />
        </FrameLayout>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>